force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/tc9_pr__Pay_Payment_File_Item__c.object-meta.xml
<CustomObject>
    <label>Pay Payment File Item</label>
    <nameField>
        <displayFormat>PFI-{0000000000}</displayFormat>
        <label>Pay Payment File Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Payment File Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>