force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Number_of_Payments__c</fullName>
    <description>The number of payments in the related Payment File.</description>
    <formula>tc9_pr__Payment_File__r.tc9_pr__Total_Number_of_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of payments in the related Payment File.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>