force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Pay Batch.</description>
    <inlineHelpText>The related Pay Batch.</inlineHelpText>
    <label>Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch__c</referenceTo>
    <relationshipLabel>Pay Payment File Items</relationshipLabel>
    <relationshipName>Pay_Payment_File_Items</relationshipName>
    <type>Lookup</type>
</CustomField>