force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Pay_Batch_Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Pay_Schedule__c</fullName>
    <description>Defines the Pay Schedule that applies to the related Pay Batch</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Schedule__c</formula>
    <inlineHelpText>Defines the Pay Schedule that applies to the related Pay Batch</inlineHelpText>
    <label>Pay Batch Pay Schedule</label>
    <type>Text</type>
</CustomField>