force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Pay_Batch_Payment_File_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Payment_File_Status__c</fullName>
    <description>The status of the related pay batch.</description>
    <formula>TEXT(tc9_pr__Pay_Batch__r.tc9_pr__Status__c)</formula>
    <inlineHelpText>The status of the related pay batch.</inlineHelpText>
    <label>Pay Batch Payment File Status</label>
    <type>Text</type>
</CustomField>