force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Pay_Batch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Start_Date__c</fullName>
    <description>The calendar period start date of the related Pay Batch.</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Calendar_Period__r.tc9_pr__Start_Date__c</formula>
    <inlineHelpText>The calendar period start date of the related Pay Batch.</inlineHelpText>
    <label>Pay Batch Start Date</label>
    <type>Date</type>
</CustomField>