force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Date__c</fullName>
    <description>The payment date of the related Payment File.</description>
    <formula>tc9_pr__Payment_File__r.tc9_pr__Payment_Date__c</formula>
    <inlineHelpText>The payment date of the related Payment File.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>