force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment entity of the related payment entity.</description>
    <inlineHelpText>The payment entity of the related payment entity.</inlineHelpText>
    <label>Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Payment_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Payment File Items</relationshipLabel>
    <relationshipName>Pay_Payment_File_Items</relationshipName>
    <type>Lookup</type>
</CustomField>