force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Payment_File__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payment File.</description>
    <inlineHelpText>The related Payment File.</inlineHelpText>
    <label>Payment File</label>
    <referenceTo>tc9_pr__Payment_File__c</referenceTo>
    <relationshipLabel>Pay Payment File Items</relationshipLabel>
    <relationshipName>Pay_Payment_File_Items</relationshipName>
    <type>Lookup</type>
</CustomField>