force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The related status of the payment file.</description>
    <formula>TEXT(tc9_pr__Payment_File__r.tc9_pr__Status__c)</formula>
    <inlineHelpText>The related status of the payment file.</inlineHelpText>
    <label>Payment File Status</label>
    <type>Text</type>
</CustomField>