force-app/main/default/objects/tc9_pr__Pay_Payment_File_Item__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Payment_File__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Payment_Date__c</columns>
    <columns>tc9_pr__Pay_Batch__c</columns>
    <columns>tc9_pr__Pay_Batch_End_Date__c</columns>
    <columns>tc9_pr__Pay_Batch_Pay_Schedule__c</columns>
    <columns>tc9_pr__Pay_Batch_Payment_File_Status__c</columns>
    <columns>tc9_pr__Pay_Batch_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>